--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Putri Arisha</title>
+	</head>
+<body>
+<h1>PUTRI NOREEN ARISHA BT YUZAIDEE</h1>
+<h2>2018430864</h2>
+<h3>D1IM1105D</h3>
+<p>this is content</p>
+</body>
+</html>
