--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,69 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>About Me</title>
+	<style> @media screen and (min-width: 600px) {
+		.nav li {
+		width: 180px;
+		border-bottom: none;
+		height: 50px;
+		line-height: 50px;
+		font-size: 1.4em;
+		}
+ 
+		/* Option 1 - Display Inline */
+		.nav li {
+		display: inline-block;
+		margin-right: -4px;
+		
+		}
+ 
+		/* Options 2 - Float
+		.nav li {
+		float: left;
+		}
+		
+		.nav ul {
+		overflow: auto;
+		width: 600px;
+		margin: 0 auto;
+		}
+  
+		.nav {
+		background-color: #444;
+		}
+		*/
+		}
+	</style>
+</head>
 
+
+		<div class="nav">
+					<ul>
+						<li class="Homepage"><a style="color: lavender" href="Index.html">Homepage</a></li>
+						<li class="Biodata"><a style="color: lavender" href="biodata.html">Biodata</a></li>
+						<li class="Education"><a style="color: lavender" href="education.html">Education</a></li>
+						<li class="Experience"><a style="color: lavender" href="experience.html">Experience</a></li>
+						<li class="Family"><a style="color: lavender" href="family.html">Family</a></li>
+						<li class="Gallery"><a style="color: lavender" href="image.html">Gallery</a></li>
+					</ul>
+				</div> 
+
+</body>
+<body style="background-color:palevioletred"> 
+<h1 style="color:wheat">NAME: PUTRI NOREEN ARISHA BT YUZAIDEE</h1>
+<h2 style="color:wheat">MATRIC NUMBER: 2018430864</h2>
+<h3 style="color:wheat">GROUP: D1IM1105D</h3>
+<h4 style="color:wheat">PROGRAM: DIPLOMA IN INFORMATION MANAGEMENT</h4>
+<h5 style="color:wheat">COURSE NAME: INTRODUCE TO WEB CONTENT MANAGEMENT AND DESIGN</h5>
+<h6 style="color:wheat">COURSE CODE: IMD311</h6>
+<h7 style="color:wheat">PREPARED FOR: MR FAIZAL HAINI FADZIL
+<p>this is my homepage</p>
+</body>
+
+
+
+
+
+
+</html>
